2001-03-16  Yuuichi Teranishi  <teranisi@gohome.org>

	* icons: New directory (Some toolbar icons are contained).

2001-03-16  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-view-source): Render as html if already display source.

2001-03-15  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-icon-directory): New variable.
	(w3m-toolbar-buttons): New constant.
	(w3m-toolbar): Ditto.
	(w3m-setup-toolbar): Define as null function.
	(w3m-mode): Call `w3m-setup-toolbar'.

	* w3m-xmas.el (w3m-use-toolbar): New variable.
	(w3m-xmas-make-toolbar-buttons): New function.
	(w3m-setup-toolbar): Ditto.

	* w3m-e21.el (w3m-use-toolbar): New variable.
	(w3m-e21-toolbar-configurations): Ditto.
	(w3m-e21-setup-toolbar): New function.
	(w3m-e21-make-toolbar-buttons): Ditto.
	(w3m-setup-toolbar): Ditto.

2001-03-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (XEmacs): Implemented the source level optimizer for
	`let' or `let*' form to remove some obsolete variables.

2001-03-15  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* README, README.ja: Update procedure of package installation.

	* w3m.el (w3m-hook): Removed.
	(w3m-goto-mailto-url): Old name is `w3m-mailto-url'.
	(w3m-goto-ftp-url): Old name is `w3m-exec-ftp'.
	(w3m-convert-ftp-url-for-emacsen): Old name is
	`w3m-convert-ftp-to-emacsen'.
	(w3m-exec): Removed code for ftp protocol.
	(w3m-alive-p): Change spec of return value when w3m is alive.
	(w3m-goto-url): Made this function safe when it is called at the
	buffer whose major mode is not equal to w3m-mode.
	(w3m): If it is interactively called when w3m is alive, it is
	simply select the appropriate buffer in the current window without
	asking url.
	(w3m-view-parent-page, w3m-browse-url, w3m-view-source,
	w3m-history): Use `w3m-goto-url' instead of `w3m'.
	(w3m-mode-map): Replace `w3m' with `w3m-goto-url'.

2001-03-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (MULE): Make `locate-library' run quietly; bind