@@ -3,5 +3,6 @@ AC_SET_MAKE
 AC_PROG_INSTALL
 AC_CHECK_EMACS
 AC_PATH_LISPDIR
+AC_PATH_ICONDIR
 AC_ADD_LOAD_PATH
 AC_OUTPUT(Makefile)
